# shared_static_library

./: CMakeLists.txt  LICENSE  README.md  run.sh
shared_use_shared/: CMakeLists.txt
shared_use_static/: CMakeLists.txt
src/: header.h  is_prime.cpp  is_prime_wrapper.cpp  main.cpp
static_use_shared/: CMakeLists.txt
static_use_static/: CMakeLists.txt
